$Id$

2015-10-17  Christian Franke  <franke@computer.org>

	Various fixes suggested by cppcheck.
	Close FILE pointer before reopening it (cppcheck: publicAllocationError).
	Add missing member initializations to ctors (cppcheck: uninitMemberVar).
	Remove redundant nullptr check (cppcheck: nullPointerRedundantCheck).
	Remove redundant assignments (cppcheck: redundantAssignment).
	Clarify calculation precedence (cppcheck: clarifyCalculation).
	Use C++-style casts for pointer types (cppcheck: cstyleCast).
	Remove duplicate on both sides of '||' (cppcheck: duplicateExpression).
	Declare ctors with one argument as 'explicit'
	(cppcheck: noExplicitConstructor).
	Remove unread variables and assignments (cppcheck: unreadVariable).
	Fix signedness of sscanf() formats strings
	(cppcheck: invalidScanfArgType_int).

2015-10-14  Christian Franke  <franke@computer.org>

	configure.ac: Disable os_solaris_ata.o by default.
	Add --with-solaris-sparc-ata option to enable.
	Makefile.am: Exclude os_solaris_ata.s from source tarball
	(Debian bug 729842).
	os_solaris.cpp: Check for WITH_SOLARIS_SPARC_ATA instead of __sparc.

2015-10-13  Christian Franke  <franke@computer.org>

	Makefile.am: Fix error handling in various shell scripts.

2015-10-13  Casper Dik  <...>

	os_solaris.cpp: Detect SATA devices as SCSI devices.  This adds
	support for auto detection of SATA devices behind SAT layer.
	Set USCSI_SILENT flag to suppress /dev/console messages on command
	error.

2015-10-11  Christian Franke  <franke@computer.org>

	drivedb.h: SiliconMotion based SSDs: Transcend SSD370S, SSD420,
	update attribute 245 (ticket #595, ticket #602).

2015-10-10  Christian Franke  <franke@computer.org>

	Makefile.am: Use MKDIR_P to create directories
	(available since automake 1.10).

	os_win32.cpp: Detect USB ID if WMI reports type name "SCSI" instead
	of "USBSTOR".
	Detect USB ID also if drive letter is specified as device name.

2015-10-04  Christian Franke  <franke@computer.org>

	drivedb.h: